[package]
name = "nkrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5.6"
rand = "0.8.5"
sanitize-filename = "0.5.0"
serde = "1.0.195"
serde_bytes = "0.11.14"
serde_derive = "1.0.195"
serde_json = "1.0.111"
winapi = {version = "0.3.9", features = ["iphlpapi", "iptypes"]}

